--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-  <i class="material-icons heart">favorite</i>
+  <label class="likes">
+    <input type="checkbox">
+    <i class="material-icons heart">favorite</i>
+
+  </label>
 
 </body>
 </html>
