Add ripple to heart

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <label class="likes">
     <input type="checkbox">
     <i class="material-icons heart">favorite</i>
+    <div class="ripple"></div>
 
   </label>
 
